Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73753

tst_qqmlnotifier failed

    XMLWordPrintable

Details

    • All
    • 46589056c399191e1afe0b2ddb1e2f0570fa8ddc (qt/qtbase/dev)

    Description

      https://codereview.qt-project.org/#/c/252472/ Update submodules on 'dev' in qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1550448404

      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/79735be4f2887f74b1604882b9216780d7fb0903/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-7bb0a1DeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/d3604a1587d1e540d98fbab2d31667140ee9d607/test_1550448616/log.txt.gz

      agent:2019/02/11 10:54:53 build.go:192: /home/qt/work/qt/qtdeclarative/tests/auto/qml/qqmlnotifier/target_wrapper.sh  ./tst_qqmlnotifier -o /home/qt/work/testresults/tests/auto/qml/qqmlnotifier082438543,xml -o -,txt
      agent:2019/02/11 10:54:53 build.go:192: ********* Start testing of tst_qqmlnotifier *********
      agent:2019/02/11 10:54:53 build.go:192: Config: Using QtTest library 5.13.0, Qt 5.13.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 8.2.0)
      agent:2019/02/11 10:54:53 build.go:192: PASS   : tst_qqmlnotifier::initTestCase()
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::testConnectNotify() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::testConnectNotify() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::testConnectNotify() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV4Binding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV4Binding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV4Binding2() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV4Binding2() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV8Binding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeV8Binding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeScriptBinding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::removeScriptBinding() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::readProperty() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::readProperty() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::propertyChange() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::propertyChange() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::disconnectOnDestroy() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(boundSignal()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (boundSignalConnections)          : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(95)]
      agent:2019/02/11 10:54:53 build.go:192: FAIL!  : tst_qqmlnotifier::disconnectOnDestroy() Compared values are not the same
      agent:2019/02/11 10:54:53 build.go:192:    Actual   (receivers(SIGNAL(cppObjectPropChanged()))): 0
      agent:2019/02/11 10:54:53 build.go:192:    Expected (cppObjectPropConnections)                 : 1
      agent:2019/02/11 10:54:53 build.go:192:    Loc: [tst_qqmlnotifier.cpp(89)]
      agent:2019/02/11 10:54:57 build.go:192: PASS   : tst_qqmlnotifier::lotsOfBindings()
      agent:2019/02/11 10:54:57 build.go:192: PASS   : tst_qqmlnotifier::deleteFromHandler()
      agent:2019/02/11 10:54:57 build.go:192: PASS   : tst_qqmlnotifier::cleanupTestCase()
      agent:2019/02/11 10:54:57 build.go:192: Totals: 4 passed, 17 failed, 0 skipped, 0 blacklisted, 3650ms
      agent:2019/02/11 10:54:57 build.go:192: ********* Finished testing of tst_qqmlnotifier *********
      agent:2019/02/11 10:54:57 build.go:192: Makefile:322: recipe for target 'check' failed
      agent:2019/02/11 10:54:57 build.go:192: make: *** [check] Error 17
      agent:2019/02/11 10:54:57 build.go:236: Process finished with error: exit status 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes